# openbls

./: .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: crash-report.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: presets.md  safety-copy.md  tactile-protocol-draft.md  threat-model.md
docs/research/: 2026-05-09-bls-evidence-and-regulatory-brief.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/a11y/: focus-trap.ts
src/lib/audio/: engine.ts
src/lib/butterfly-hug/: ButterflyHugGuide.svelte
src/lib/crash/: CrashModal.svelte  handler.ts  report.ts
src/lib/guide/: content.ts
src/lib/i18n/: index.ts
src/lib/persistence/: store.ts
src/lib/presets/: builtin.ts  io.ts  schema.ts
src/lib/safety/: ContraindicationGate.svelte  CrisisLink.svelte  copy.ts  store.ts
src/lib/session/: ControlsPanel.svelte  types.ts
src/lib/stores/: presets.ts  session.ts
src/lib/ui/: PromptModal.svelte
src/lib/visual/: SessionCanvas.svelte  paths.ts  renderer.ts  wcag.ts
src/routes/: +layout.svelte  +page.svelte
tests/e2e/: first-launch.spec.ts
tests/unit/: audio-engine.test.ts  crash-report.test.ts  persistence.test.ts  presets.test.ts  session-timer.test.ts  visual-flash-rate.test.ts  visual-paths.test.ts
(+5 files in other folders)
