[package]
name = "openbls"
version = "0.1.0"
description = "Open-source bilateral-stimulation tool for licensed clinicians"
authors = ["OpenBLS contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gndl00p/openbls"
rust-version = "1.77"

[lib]
name = "openbls_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
